--- a/BuildingAnarchy/BuildingAnarchy.csproj
+++ b/BuildingAnarchy/BuildingAnarchy.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Manager.cs" />
     <Compile Include="Mod.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SerializableColor.cs" />
     <Compile Include="SerializableDataExtension.cs" />
     <Compile Include="Settings.cs" />
   </ItemGroup>
